force-app/main/default/objects/StoredMetadata__c/StoredMetadata__c.object-meta.xml
<CustomObject>
    <label>StoredMetadata</label>
    <nameField>
        <label>StoredMetadata__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StoredMetadatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>