force-app/main/default/objects/StoredMetadata__c/fields/ChunkIndex__c.field-meta.xml
<CustomField>
    <fullName>ChunkIndex__c</fullName>
    <label>ChunkIndex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>