force-app/main/default/objects/StoredMetadata__c/fields/DataChunk__c.field-meta.xml
<CustomField>
    <fullName>DataChunk__c</fullName>
    <label>DataChunk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>