force-app/main/default/objects/StoredMetadata__c/fields/MetadataDate__c.field-meta.xml
<CustomField>
    <fullName>MetadataDate__c</fullName>
    <label>MetadataDate</label>
    <type>DateTime</type>
</CustomField>